# PoemGenerator

./: .gitignore  README.md  crawl.py  crawler.py  dataset_utils.py  main.ipynb  main.py  model.py  modules.py  pyproject.toml  requirements.txt  test.py  train.py  utils.py
.github/: dependabot.yml
checkpoints/: checkpoint  ckpt.index  cpkt.data-00000-of-00002  cpkt.index
checkpoints/ckpt/variables/: variables.index
poems/: poem01.txt  poem02.txt  poem03.txt  poem04.txt  poem05.txt  poem06.txt  poem07.txt  poem08.txt  poem09.txt  poem10.txt  poem11.txt  poem12.txt  poem13.txt  poem14.txt  poem15.txt  poem16.txt  poem17.txt  poem18.txt  poem19.txt  poem20.txt  poem21.txt  poem22.txt  poem23.txt  poem24.txt  poem25.txt  poem26.txt  poem27.txt  poem28.txt  poem29.txt  poem30.txt  poem31.txt  poem32.txt  poem33.txt  poem34.txt  poem35.txt  poem36.txt  poem37.txt  poem38.txt  poem39.txt  poem40.txt  (+10 more)
