[tool.poetry]
name = "poemgenerator"
version = "0.1.0"
description = ""
authors = ["sqrtpi177 <solar0037@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
requests = "^2.24.0"
tokenizers = "^0.9.3"
beautifulsoup4 = "^4.9.3"
joblib = "^0.17.0"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
